# HSAILJIT

./: CMakeLists.txt  env.sh  hsailc.cpp  hsailjit.cpp  sum.bc  sum.ll
c_src/: sum.c
compilation/: clocrun.sh  manual.sh
compilation/src/: sum.cl  vector_copy.cl
